# droidpad-gamepad

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: cachix.yml  ci.yml  release.yml
flatpak/: io.github.tofixrs.droidpad-gamepad-cli.yaml  io.github.tofixrs.droidpad-gamepad.yaml
modules/: default.nix  devShells.nix  nixos-module.nix
modules/pkgs/: default.nix  droidpad-gamepad.nix
res/: 99-droidpad-gamepad.rules  Game.Controller.json  io.github.tofixrs.droidpad-gamepad.desktop  io.github.tofixrs.droidpad-gamepad.metainfo.xml
src/: keys.rs  main.rs  message.rs
src/app/: mod.rs  runtime.rs
src/controller/: linux.rs  mod.rs  vigembus.rs  vjoy.rs  windows.rs
src/controller/windows/: vigembus.rs  vjoy.rs
src/input/: key.rs  message.rs  mod.rs
src/transport/: bluetooth.rs  bluetooth_windows.rs  mod.rs  ws.rs
src/transport/bluetooth/: linux.rs  mod.rs  windows.rs
src/ui/: mod.rs  state.rs  tray.rs  view.rs  window.rs
