[package]
name = "droidpad-gamepad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
clap = { version = "4.5.40", features = ["derive"] }
local-ip-address = "0.6.5"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies]
vjoy = "0.6.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

