[package]
name = "droidpad-gamepad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
local-ip-address = "0.6.5"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["full"] }
evdev-rs = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies]
vjoy = {version = "0.6.0", optional = true}
vigem-rust = {version = "0.1.1", optional = true}
windows = { version = "0.62.2", features = [
  "Devices_Bluetooth_Rfcomm",
  "Foundation",
  "Networking_Sockets",
  "Storage_Streams",
] }

[features]
default = ["vigem", "vjoy", "ws", "bluetooth"]
vigem = ["dep:vigem-rust"]
vjoy = ["dep:vjoy"]
ws = []
bluetooth = []

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
