[package]
name = "droidpad-gamepad"
version = "0.1.0"
edition = "2024"
description = "A server to use DroidPad as a game controller on Linux and Windows"
repository = "https://github.com/Tofixrs/droidpad-gamepad"
homepage = "https://github.com/Tofixrs/droidpad-gamepad"
keywords = ["gamepad", "controller", "droidpad", "remote", "uinput"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crossbeam-channel = "0.5.15"
futures-util = "0.3.31"
dirs = "6.0.0"
gpui = { path = "./third_party/zed/crates/gpui", optional = true }
gpui_platform = {path = "third_party/zed/crates/gpui_platform", optional = true}
gpui-component = {path = "third_party/gpui-component/crates/ui", optional = true}
local-ip-address = "0.6.5"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tray-icon = { version = "0.23.1", optional = true }
image = { version = "0.25.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["full"] }
evdev-rs = "0.6.2"
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
vjoy = {version = "0.7.1", optional = true}
vigem-rust = {version = "0.1.1", optional = true}
windows = { version = "0.62.2", features = [
  "Devices_Bluetooth_Rfcomm",
  "Foundation",
  "Networking_Sockets",
  "Storage_Streams",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["vigem", "vjoy", "ws", "bluetooth", "ui"]
vigem = ["dep:vigem-rust"]
vjoy = ["dep:vjoy"]
ws = []
bluetooth = []
ui = ["dep:gpui", "dep:gpui_platform", "dep:gpui-component", "dep:tray-icon", "dep:image", "dep:gtk"]

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[patch."https://github.com/zed-industries/zed"]
gpui = { path = "./third_party/zed/crates/gpui"}
